tests/script_errors/lexer_unterminated_string/error.txt
Error: 
    1 | "this is a string;       
      | ^^^^^^^^^^^^^^^^^^ It looks like you forgot to terminate a string with a closing '"'